2006-04-23  Jordi Mallach  <jordi@sindominio.net>

	* src/mud-log.c: Fix gi18n.h include and unify log format.

2006-04-22  Les Harris  <hl.harris@comcast.net>

	* ui/main.glade: Added save dialog, set Start/Stop Logging and Save
	Buffer menu items to not sensitive on startup.

	* src/gnome-mud.c: Now adds various folders into its directory if they
	do not exist (plugins, logs).  

	* src/mud-connection-view.[ch]: Added in support for the MudLog
	object.	Also added in two accessor functions to facilitate logging
	and buffer dumping.

	* src/mud-window.c: Made the various logging menu items activate and
	dim according to wether or not they are relevant. Added callbacks for
	the logging menuitems.

	* src/mud-log.[ch]: New files which implement the MudLog object.

2006-04-09  Paul Esson  <paul.esson@gmail.com>

	* src/mud-tray.c: Bugfix, fixes problem with two text boxes 
	appearing simultaneously.

	* ui/main.glade:  Adds Connect, Disconnect & Reconnect buttons.
	Changes menu icons for Connect & Reconnect to gtk-standard icons.
	
	* src/mud-window.c (mud_window_inputtoggle_cb, 
	mud_window_size_request, mud_window_init): Stops use of gtkpaned
	replaced with vbox in glade edit.

	* src/mud-window.[ch] (mud_window_init): Added callback for 
	buttons from glade edit.

	(mud_window_add_connection_view): Added code to display either 
	the MUDs name as listed in the mudlist, or the MUDs hostname, 
	depending on the connection method.
	
2006-02-14  Jordi Mallach  <jordi@sindominio.net>

	* src/mud-preferences.[ch]: Removed.

2006-02-08  Daniel Patton  <seven-nation@army.com>

	* src/gnome-mud.h:  Removed a whole heap of cruft.
	
2006-02-03  Daniel Patton  <seven-nation@army.com>

	* src/mud-window.c (mud_window_textentry_activate): Added code to
	prevent crash on a blank line of input.
	Added if clause to honour keeptext gconf value.

2006-01-24  Clytie Siddall  <clytie@riverland.net.au>

	* configure.in:	Added vi in ALL_LINGUAS line.
